# genai-examples

./: README.md  pyproject.toml  simple_slides.py  template.pptx
