[tool.poetry]
name = "genai-examples"
version = "0.1.0"
description = ""
authors = ["He Fei <droxer.he@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-pptx = "^1.0.2"
llama-index = "^0.11.22"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
